# Bachelorproef

./: .gitmodules  CMakeLists.txt  rp2040_hat_c-patch.cmake
libraries/: CMakeLists.txt
main/inc/: ILS_MONITOR.h  IO_HANDLER.h  SD_conf.h  main.h  printer.h  types.h
main/src/: CMakeLists.txt  ILS_MONITOR.c  IO_HANDLER.c  SD_conf.c  hw_config.c  main.c  printer.c  ws2812.pio
patches/: 02_pico_sdk_pioasm_cstdint.patch
